--- a/goodby.html
+++ b/goodby.html
@@ -4,4 +4,5 @@
 <ul>
   <li> English: Goodbye, friends! </li>
   <li> Spanish:  Adios, amigos! </li>
+  <li> California: see ya later, dude!</li>
 </ul>
